# ripplerx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
Resources/presets/: Bells.xml  Bells2.xml  Cans.xml  Crystal.xml  DoorBell.xml  Fifths.xml  Fight.xml  Gong.xml  Harp.xml  Harpsi.xml  Init.xml  KeyRing.xml  Marimba.xml  OldClock.xml  Ride.xml  Sink.xml  Stars.xml  Strings.xml  Tabla2.xml  Tubes.xml
Source/: Constants.h  Globals.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StateManager.h
Source/dsp/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  Limiter.h  Mallet.cpp  Mallet.h  Modal.cpp  Modal.h  Noise.cpp  Noise.h  Partial.cpp  Partial.h  Resonator.cpp  Resonator.h  Voice.cpp  Voice.h  Waveguide.cpp  Waveguide.h
Source/ui/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  Meter.cpp  Meter.h  Pitch.cpp  Pitch.h  Rotary.cpp  Rotary.h  Slider.cpp  Slider.h
doc/: macos-readme.txt
res/presets/: Bells2.xml  Crash.xml  Flute.xml  Init.xml  Kalimba.xml  Ride2.xml  Sankyo.xml  Sink.xml  Tabla.xml
resources/presets/: Bong.xml  Crystal.xml  Gong.xml  Ride.xml  Vibes.xml
src/: Globals.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Comb.h  Envelope.cpp  Filter.cpp  Filter.h  Limiter.h  Mallet.cpp  Mallet.h  Models.cpp  Models.h  Noise.cpp  Noise.h  Partial.cpp  Partial.h  Resonator.cpp  Resonator.h  Sampler.cpp  Sampler.h  Utils.h  Voice.cpp  Voice.h  Waveguide.cpp  Waveguide.h
src/ui/: About.cpp  About.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  Meter.cpp  Meter.h  Pitch.cpp  Rotary.cpp  Rotary.h  TensionCtrl.cpp  TensionCtrl.h
